Closed Bug 94786 Opened 24 years ago Closed 24 years ago

Network installer fails with a warning about xpcom.xpi

Categories

(CCK Graveyard :: CCK-Wizard, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: blee, Assigned: shrutiv)

Details

(Whiteboard: Need to review patch)

Attachments

(5 files)

Steps to reproduce: 1) Create a custom build installer with an ftp URL put in. 2) Select everything inside Core dir and upload them to a dir on an ftp server. 3) Download the network (stub) installer, N6Setup.exe and launch it. ==> Shortly after stub installer starts to download Netscape installer files, it stops with a warning "xpcom.xpi cannot be found". Observed in CCK 6.1RTM, 6.1 PR1 and 6.0.
Status: NEW → ASSIGNED
Whiteboard: Need to review patch
r=tao. would you please also attach a diff of the config.ini before and after the patch? thx
and the revision number :-)
Diff of config.ini before and after the patch: 1396c1396 < Domain0=ftp:// --- > Domain0=ftp://ftp2.cdesoftware.net/pub/Netscape/download
Marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Hi, Shruti: Regarding the config.ini diff, please do this: 1. Run CCK6.1 RTM to produce a ftp download build to be hosted on ftp://ftp.foo.com/n6.1/download 2. Run the CCK6.1 build you just fixed to produce a ftp download build to be hosted on ftp://ftp.foo.com/n6.1/download 3. Diff the config.ini from (1) and (2) Thanks
I entered the ftp location as: ftp://jazz.netscape.com/users/shrutiv/publish/ftpinstall Running a diff gives the same output as my previous attachment. However I have attached the diff, most of it is just the difference between "n6.1b1" and "n6.1" strings, except for the last statement.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I did a diff again. The output is the same.
Status: REOPENED → ASSIGNED
Verified fixed in 8/10 respin bld.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Marking verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: