Fixing bug 94786: Network installer fails with a warning about xpcom.xpi (r=tao)